plang/testing/logs/false-incorrect/134/program134.p.p
rqj Z eLyLO (HkCX) YE :- iiy0 p0ud, mG2 (SZQXo) (Zh).

s uf6 (Dk) H6 :- jqZzA wx T (Vb).
n d0 (OlM) hUkL :- (yhh4g (OP) (ns VDEHd) Gx (MG8), (soj (iM (Tq) V)); (nh (huhzu) (GqBi) (sxcbs (ZO) e0 (nO) cS), ge4 (B4EXa) A)), ij (zeH ZSLG cn (xK7vX (FHN))) r (Ep); (gh hZAP), h (UwL) (J) (YRynG) (cDA9k (zNG (nr3wE (Pn8vC) (K8fv) (UKL) m) (Ao6k)) (FzlWH) L); nsnGZ (wsRZ hGI GgBmo (Z) (gxNg (v4c6 (r (fXQ)) (Vi63S)) (j9 Tx SDpR ZY (y)))) (B6) O (a eAb (JkR9)); ((mDE4p Q qjjN (qL sEcI ul5M (A)) cf)).
f (t1k (o (wOfu (I62) (BVyiB) (WSiL)) lO1 (p)) t Ftsca FLVvf) (ir9E7) ntZn (GRt7i) :- ((a6Ne R S0dHZ (v (KzmdE) ykt (d8z C (fg (oonUa i8mCD (YF0oX) (l1N5)) psmH (tpOPD) (zhvl (z p8 fO2 (KKa)) YtW)) (TR) (iU (cOH J MGk9 (E7fA)) U (v qgxaX (X1yc) (OC6r) (fWs dW (gz5U RK5f HCE tH8b a))) (L))) aD5h) (Z5z), d5 (w oayDF (kbX9) E (Tc)) f e pTFN, (gVZY J (Oyp) (YYW)), vGqyD)).


rSd (P7Nhn) T7IkW :- dTlCe ikK X2Nuv (Qg) (rQf98), (eP3X (RxiX)).


wI (ysY k trD) (akOR (pH) (aZ Vlo6 dO)) :- ee AL9 (e2q sk7X3), (g); (hI), ljq D5gfe (G), e pIF Gzj pX8qN; voEi1; mM UM; hbq.

lv (EMH) (mK Yn TDa).
s y.

nf EU5 jg (Y) :- (gwIy Y (e89 mLGN (J6) piQ), i qk8uB (pk3Yd Bzf Zf (q31 XKg)), yrJM OkkT9 (ewT5 (VX3K) (d) (pgVP U oLZw (q (GRsn)) Caw)) (Q) (oN p (G) (gKH lO1) HKVM), az (m (P2) bhC sctc6 Ys1pp) (Fl5) (SG) ZiP, ((b (r8s (p ehJ KcJO) D) (O5yN) (AEo); bFnO4 (s CoOm (k (f03oF kyIx ABjh (u)) T2N (LNk) E) (XDQbW) gB0hT) D5kq uwF ezHZ))).

o5bN Z26iT in (c KNCR) E :- ((fBA (ybIyA brz Ezbw)), bh); bXHvX (RM1); ((q3mh Cs Nx9)).
i M8Lx (ezLeD (HZE0D) (K)).
hx :- (swx3 fI1qI (syL (i Z7rS KB (SB) (s (dgQsZ (RERwq)) iqQSs (BFU))) (X) (h (S) kpg)) (SJI7)); g (tBfi) tR; vg (SiQX) yu.
? (gclfc (X) (e (YOvat)) P, clo; h (N) (SC2); kfl (S); jj (nmJ (FE5i) uWq llY1S) (L)).



